2000-11-20  Neil Booth  <neilb@earthling.net>

	* cppmacro.c (paste_tokens): Rename from paste_payloads.
	Change token type after pasting spellings.
	(paste_all_tokens): Use it.
	* gcc.dg/cpp/paste2.c: Update test.
	* objc/execute/paste.m: New test.

2000-11-20  Richard Henderson  <rth@redhat.com>

	* dwarf.h (FMT_CODE): Adjust argument order; fix mapping to
	dwarf_subscr_data_formats bits.
	* dwarfout.c (simple_type_size_in_bits): Handle a type with
	no computed size as size zero.
	(field_byte_offset): Likewise.
	(subscript_data_attribute): Handle a range with no upper bound.

2000-11-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gansidecl.h (const): Check __STDC__ before undef'ing `const'.

2000-11-20  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-typeck.c (build_conditional_expr): When merging type
	qualifiers for conditional expressions between a pointer and a
	pointer to a void type, merge the qualifiers on the target types
	rather than the pointer type.  Remove obsolete conditioned out
	code.

2000-11-20  Neil Booth  <neilb@earthling.net>

	* c-lang.c (lang_init_options): Update call to
	cpp_reader_init.
	* cppmain.c (main): Similarly.
	* fix-header.c (read_scan_file): Similarly.
	* cp/lex.c (lang_init_options): Similarly.
	* objc/objc-act.c (lang_init_options): Similarly.
	* cppexp.c (parse_number): Only warn for unextended C89.
	* cppinit.c (set_lang): New function.
	(cpp_reader_init): Take a LANG argument and pass it to set_lang.
	(COMMAND_LINE_OPTIONS): New option std=c++98.
	(cpp_handle_option): Use set_lang.
	* cpplex.c (_cpp_lex_token): Warn pedantically if not C99.
	* cppib.h (enum_c_lang): New enumeration.  Update comments.

2000-11-20  Will Cohen  <wcohen@redhat.com>

	* calls.c (expand_call): Clear target only when target is in
	hard register and current_function_check_memory_usage is set.

2000-11-20  Bernd Schmidt  <bernds@redhat.co.uk>

	* toplev.c (rest_of_compilation): Run optimize_mode_switching even
	if not optimizing.